, to_val)

fp32 = [(i.name, list(i.dims)) for i in m.graph.initializer if i.data_type == 1]
print(FP32
File "<string>", line 3
    m = onnx.load(/home/harvest/models/axera-onnx/onnx-new/layer_00_fp16.onnx)
                  ^
SyntaxError: invalid syntax
